// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LDAP Provider LDAP Provider Snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-xlarge StyledProps--background-white"
  >
    <div
      class="Collapse--main collapseClassName"
    >
      <div
        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeaderClassName height60"
      >
        <div
          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
            data-icon="main-chevron-up"
          >
            <svg
              height="10"
              viewBox="0 0 14 8"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-left-xlarge"
          >
            <label
              class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal StyledProps--color StyledProps--color-grey900"
            >
              <input
                checked=""
                type="radio"
              />
              <span
                class="bp3-control-indicator"
              />
              platform.authSettings.loginViaLDAP
            </label>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        />
      </div>
      <div
        class="Collapse--collapse"
      >
        <div
          class="bp3-collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card card"
              >
                <p
                  class="StyledProps--font StyledProps--main flexGrowFull StyledProps--font-variation-card-title"
                  style="width: 30%;"
                >
                  ldap11223355
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                  style="width: 70%;"
                >
                  platform.authSettings.authorizationEnabled
                </p>
                <button
                  aria-label="test"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                  data-testid="ldap-config-test"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    test
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-icon"
                      data-testid="provider-button"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="currentColor"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="2"
                            cy="2"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="8"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="14"
                            r="1.5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LDAP Provider LDAP Provider Snapshot with no data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-xlarge StyledProps--background-white"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithRadioBtn"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-left-xlarge StyledProps--margin-top-xsmall"
      >
        <label
          class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--color StyledProps--color-primary7"
        >
          <input
            data-testid="open-add-ldap-modal"
            type="radio"
          />
          <span
            class="bp3-control-indicator"
          />
          platform.authSettings.ldap.addLdap
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`LDAP Wizard in edit mode Check for wizard rendering in edit mode and overview 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-xlarge StyledProps--background-white"
  >
    <div
      class="Collapse--main collapseClassName"
    >
      <div
        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeaderClassName height60"
      >
        <div
          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
            data-icon="main-chevron-up"
          >
            <svg
              height="10"
              viewBox="0 0 14 8"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-left-xlarge"
          >
            <label
              class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal StyledProps--color StyledProps--color-grey900"
            >
              <input
                checked=""
                type="radio"
              />
              <span
                class="bp3-control-indicator"
              />
              platform.authSettings.loginViaLDAP
            </label>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        />
      </div>
      <div
        class="Collapse--collapse"
      >
        <div
          class="bp3-collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card card"
              >
                <p
                  class="StyledProps--font StyledProps--main flexGrowFull StyledProps--font-variation-card-title"
                  style="width: 30%;"
                >
                  ldap11223355
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                  style="width: 70%;"
                >
                  platform.authSettings.authorizationEnabled
                </p>
                <button
                  aria-label="test"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                  data-testid="ldap-config-test"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    test
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-icon"
                      data-testid="provider-button"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="currentColor"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="2"
                            cy="2"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="8"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="14"
                            r="1.5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LDAP Wizard in edit mode Check for wizard rendering in edit mode and query test failure 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-xlarge StyledProps--background-white"
  >
    <div
      class="Collapse--main collapseClassName"
    >
      <div
        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeaderClassName height60"
      >
        <div
          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
            data-icon="main-chevron-up"
          >
            <svg
              height="10"
              viewBox="0 0 14 8"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-left-xlarge"
          >
            <label
              class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal StyledProps--color StyledProps--color-grey900"
            >
              <input
                checked=""
                type="radio"
              />
              <span
                class="bp3-control-indicator"
              />
              platform.authSettings.loginViaLDAP
            </label>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        />
      </div>
      <div
        class="Collapse--collapse"
      >
        <div
          class="bp3-collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card card"
              >
                <p
                  class="StyledProps--font StyledProps--main flexGrowFull StyledProps--font-variation-card-title"
                  style="width: 30%;"
                >
                  ldap11223355
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                  style="width: 70%;"
                >
                  platform.authSettings.authorizationEnabled
                </p>
                <button
                  aria-label="test"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                  data-testid="ldap-config-test"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    test
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-icon"
                      data-testid="provider-button"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="currentColor"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="2"
                            cy="2"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="8"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="14"
                            r="1.5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LDAP setup Wizard Group Settings step works in LDAP wizard ADD mode  1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog"
>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="StepWizard--main wizardContainer StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <span
          class="StepWizard--header"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey0"
            data-icon="user-groups"
          >
            <svg
              height="56"
              viewBox="0 0 32 33"
              width="56"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.988 12.173a3.12 3.12 0 116.24 0 3.12 3.12 0 01-6.24 0zm3.12-4.72a4.72 4.72 0 00-2.883 8.458l-2.611 4.967-1.365-3.468a3.291 3.291 0 10-3.707-.05l-2.277 5.968a.8.8 0 00.748 1.085h4.742l-.772 1.467a.8.8 0 00.708 1.173h14.834a.8.8 0 00.702-1.184l-.796-1.456h4.729a.8.8 0 00.744-1.095l-2.344-5.91a3.291 3.291 0 10-3.704-.046l-1.325 3.578-2.689-4.918a4.72 4.72 0 00-2.734-8.569zm1.29 9.262a4.724 4.724 0 01-2.759-.054l-4.623 8.792h12.16l-4.778-8.738zm5.652-2.05a1.691 1.691 0 113.382 0 1.691 1.691 0 01-3.382 0zm-.501 8.135l.007.013h4.426l-1.932-4.871a3.352 3.352 0 01-.7-.009l-1.8 4.867zm-14.81-4.858l1.891 4.806-.034.065H5.174l1.862-4.88a3.322 3.322 0 00.703.01zm-1.998-3.277a1.691 1.691 0 113.382 0 1.691 1.691 0 01-3.382 0z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <span
          class="StepWizard--title StepWizard--header"
        >
          platform.authSettings.ldap.addLdap
        </span>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            overview
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.connectionSettings
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            delegate.DelegateselectionLabel
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            4
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.userQueries
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName StepWizard--stepSubTitleString"
            style="--text-line-clamp: 2; width: 200px;"
          >
            titleOptional
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            5
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.groupQueries
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName StepWizard--stepSubTitleString"
            style="--text-line-clamp: 2; width: 200px;"
          >
            titleOptional
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            6
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.userSyncSchedule
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical StyledProps--main stepContainer stepQueryContainer"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium"
            style="align-items: center;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--margin-right-small"
            >
              platform.authSettings.ldap.userQueries
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-light"
            >
              titleOptional
            </p>
          </div>
          <div
            class="Layout--horizontal StyledProps--main alignCenter StyledProps--margin-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main fluidLabel StyledProps--color StyledProps--color-black"
            >
              platform.authSettings.ldap.setScopeForUserQuery
            </p>
            <button
              aria-label="platform.authSettings.ldap.newUserQuery"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              data-testid="add-another-user-query-btn"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                platform.authSettings.ldap.newUserQuery
              </span>
            </button>
          </div>
          <div
            class="Layout--vertical StyledProps--main queryCtr"
          >
            <div
              class="StyledProps--font StyledProps--main settingsListCtr"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main queryPreviewItem StyledProps--padding-medium"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--color StyledProps--color-primary6 StyledProps--margin-right-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    platform.authSettings.ldap.userQueryTitle
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main queryCtaContainer"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      data-testid="edit-user-query-btn"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      data-testid="delete-user-query-btn"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="main-trash"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 16 20"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <ul
                    class="userSettingsList"
                  >
                    <li>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--margin-right-xsmall"
                        >
                          platform.authSettings.ldap.baseDN: 
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ou=Users,o=611a119873e7186e37f75599,dc=jumpcloud,dc=com
                        </p>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--margin-right-xsmall"
                        >
                          platform.authSettings.ldap.searchFilter: 
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          (objectClass=inetOrgPerson)
                        </p>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--margin-right-xsmall"
                        >
                          platform.authSettings.ldap.nameAttributes: 
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          cn
                        </p>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--margin-right-xsmall"
                        >
                          platform.authSettings.ldap.emailAttributes: 
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          mail
                        </p>
                      </div>
                    </li>
                    <li>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--margin-right-xsmall"
                        >
                          platform.authSettings.ldap.groupMembershipAttributes: 
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          memberOf
                        </p>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main stepCtaContainer"
          >
            <button
              aria-label="back"
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              data-testid="back-to-delegate-step"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              aria-label="continue"
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              data-testid="submit-usery-query-step"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                continue
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
        data-icon="harness-with-color"
      >
        <svg
          height="346"
          viewBox="0 0 25 25"
          width="346"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <button
      aria-label="close modal"
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main crossIcon Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      data-testid="close-ldap-setup-wizard"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="18"
          viewBox="0 0 16 16"
          width="18"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <footer />
</div>
`;

exports[`LDAP setup Wizard Group Settings step works in LDAP wizard ADD mode  2`] = `
<div
  class="bp3-dialog Dialog--dialog dialog"
>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="StepWizard--main wizardContainer StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <span
          class="StepWizard--header"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey0"
            data-icon="user-groups"
          >
            <svg
              height="56"
              viewBox="0 0 32 33"
              width="56"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.988 12.173a3.12 3.12 0 116.24 0 3.12 3.12 0 01-6.24 0zm3.12-4.72a4.72 4.72 0 00-2.883 8.458l-2.611 4.967-1.365-3.468a3.291 3.291 0 10-3.707-.05l-2.277 5.968a.8.8 0 00.748 1.085h4.742l-.772 1.467a.8.8 0 00.708 1.173h14.834a.8.8 0 00.702-1.184l-.796-1.456h4.729a.8.8 0 00.744-1.095l-2.344-5.91a3.291 3.291 0 10-3.704-.046l-1.325 3.578-2.689-4.918a4.72 4.72 0 00-2.734-8.569zm1.29 9.262a4.724 4.724 0 01-2.759-.054l-4.623 8.792h12.16l-4.778-8.738zm5.652-2.05a1.691 1.691 0 113.382 0 1.691 1.691 0 01-3.382 0zm-.501 8.135l.007.013h4.426l-1.932-4.871a3.352 3.352 0 01-.7-.009l-1.8 4.867zm-14.81-4.858l1.891 4.806-.034.065H5.174l1.862-4.88a3.322 3.322 0 00.703.01zm-1.998-3.277a1.691 1.691 0 113.382 0 1.691 1.691 0 01-3.382 0z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <span
          class="StepWizard--title StepWizard--header"
        >
          platform.authSettings.ldap.addLdap
        </span>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            overview
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.connectionSettings
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            delegate.DelegateselectionLabel
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.userQueries
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName StepWizard--stepSubTitleString"
            style="--text-line-clamp: 2; width: 200px;"
          >
            titleOptional
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--completedStep"
        >
          <span
            class="StepWizard--completedIcon"
          >
            <span
              class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="small-tick"
            >
              <svg
                data-icon="small-tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-tick
                </desc>
                <path
                  d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.groupQueries
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName StepWizard--stepSubTitleString"
            style="--text-line-clamp: 2; width: 200px;"
          >
            titleOptional
          </p>
        </div>
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            6
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.userSyncSchedule
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical StyledProps--main stepContainer stepScheduleContainer"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-large"
            style="align-items: center;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--margin-right-small"
            >
              platform.authSettings.ldap.userSyncSchedule
            </p>
          </div>
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="Layout--vertical Layout--layout-spacing-large StyledProps--main schedulePanelContainer"
                >
                  <div
                    class="Layout--vertical StyledProps--main formContent"
                  >
                    <div
                      class="bp3-tabs Tabs--main Tabs--horizontal"
                    >
                      <div
                        class="bp3-tab-list"
                        role="tablist"
                      >
                        <div
                          class="bp3-tab-indicator-wrapper"
                          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                        >
                          <div
                            class="bp3-tab-indicator"
                          />
                        </div>
                        <div
                          aria-controls="bp3-tab-panel_Wizard_Custom"
                          aria-disabled="false"
                          aria-expanded="true"
                          aria-selected="true"
                          class="bp3-tab"
                          data-tab-id="Custom"
                          id="bp3-tab-title_Wizard_Custom"
                          role="tab"
                          tabindex="0"
                        >
                          common.repo_provider.customLabel
                        </div>
                      </div>
                      <div
                        aria-hidden="false"
                        aria-labelledby="bp3-tab-title_Wizard_Custom"
                        class="bp3-tab-panel"
                        id="bp3-tab-panel_Wizard_Custom"
                        role="tabpanel"
                      >
                        <div
                          class="bp3-form-group"
                          data-id="expression-0"
                          style="margin: 0px;"
                        >
                          <label
                            class="bp3-label"
                            for="expression"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="ldapSyncScheduleForm_expression"
                            >
                              common.schedulePanel.enterCustomCron
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="expression"
                                type="text"
                                value="0 0 */1 ? * * *"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main spacer"
                          style="margin-left: 0px; width: 100%;"
                        >
                          <div
                            class="StyledProps--font StyledProps--main"
                          />
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main expressionBreakdown"
                          data-name="expressionBreakdown"
                        >
                          <p
                            class="StyledProps--font StyledProps--main title"
                            data-tooltip-id="expressionBreakdown"
                          >
                            common.schedulePanel.expressionBreakdown
                          </p>
                          <div
                            class="Layout--horizontal StyledProps--main"
                          >
                            <div
                              class="Layout--vertical StyledProps--main column"
                              data-name="column"
                              style="width: 100px;"
                            >
                              <div
                                class="StyledProps--font StyledProps--main label"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  common.schedulePanel.minutesLabel
                                </p>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main value"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  0
                                </p>
                              </div>
                            </div>
                            <div
                              class="Layout--vertical StyledProps--main column"
                              data-name="column"
                              style="width: 100px;"
                            >
                              <div
                                class="StyledProps--font StyledProps--main label"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  common.schedulePanel.hoursLabel
                                </p>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main value"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  */1
                                </p>
                              </div>
                            </div>
                            <div
                              class="Layout--vertical StyledProps--main column"
                              data-name="column"
                              style="width: 125px;"
                            >
                              <div
                                class="StyledProps--font StyledProps--main label"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  common.schedulePanel.dayOfMonthLabel
                                </p>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main value"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  ?
                                </p>
                              </div>
                            </div>
                            <div
                              class="Layout--vertical StyledProps--main column"
                              data-name="column"
                              style="width: 100px;"
                            >
                              <div
                                class="StyledProps--font StyledProps--main label"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  common.schedulePanel.monthLabel
                                </p>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main value"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  *
                                </p>
                              </div>
                            </div>
                            <div
                              class="Layout--vertical StyledProps--main column"
                              data-name="column"
                              style="width: 250px;"
                            >
                              <div
                                class="StyledProps--font StyledProps--main label"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  common.schedulePanel.dayOfWeekLabel
                                </p>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main value"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main"
                                >
                                  *
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main spacer"
                          style="padding-bottom: 0px; margin-left: 0px; width: 100%;"
                        >
                          <div
                            class="StyledProps--font StyledProps--main"
                          />
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main expression"
                          data-name="expression"
                        >
                          <p
                            class="StyledProps--font StyledProps--main label"
                            data-tooltip-id="cronExpression"
                          >
                            common.schedulePanel.cronExpression
                          </p>
                          <div
                            class="StyledProps--font StyledProps--main field"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                              data-testid="cron-expression"
                            >
                              0 0 */1 ? * * *
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="Layout--horizontal StyledProps--main stepCtaContainer"
          >
            <button
              aria-label="back"
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              data-testid="back-to-group-query-step"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              aria-label="save"
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              data-testid="submit-cron-expression-step"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
        data-icon="harness-with-color"
      >
        <svg
          height="346"
          viewBox="0 0 25 25"
          width="346"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <button
      aria-label="close modal"
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main crossIcon Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      data-testid="close-ldap-setup-wizard"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="18"
          viewBox="0 0 16 16"
          width="18"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <footer />
</div>
`;

exports[`LDAP setup Wizard Setup Wizard renders with Overview step in ADD mode 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog"
>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="StepWizard--main wizardContainer StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <span
          class="StepWizard--header"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey0"
            data-icon="user-groups"
          >
            <svg
              height="56"
              viewBox="0 0 32 33"
              width="56"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.988 12.173a3.12 3.12 0 116.24 0 3.12 3.12 0 01-6.24 0zm3.12-4.72a4.72 4.72 0 00-2.883 8.458l-2.611 4.967-1.365-3.468a3.291 3.291 0 10-3.707-.05l-2.277 5.968a.8.8 0 00.748 1.085h4.742l-.772 1.467a.8.8 0 00.708 1.173h14.834a.8.8 0 00.702-1.184l-.796-1.456h4.729a.8.8 0 00.744-1.095l-2.344-5.91a3.291 3.291 0 10-3.704-.046l-1.325 3.578-2.689-4.918a4.72 4.72 0 00-2.734-8.569zm1.29 9.262a4.724 4.724 0 01-2.759-.054l-4.623 8.792h12.16l-4.778-8.738zm5.652-2.05a1.691 1.691 0 113.382 0 1.691 1.691 0 01-3.382 0zm-.501 8.135l.007.013h4.426l-1.932-4.871a3.352 3.352 0 01-.7-.009l-1.8 4.867zm-14.81-4.858l1.891 4.806-.034.065H5.174l1.862-4.88a3.322 3.322 0 00.703.01zm-1.998-3.277a1.691 1.691 0 113.382 0 1.691 1.691 0 01-3.382 0z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <span
          class="StepWizard--title StepWizard--header"
        >
          platform.authSettings.ldap.addLdap
        </span>
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            overview
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.connectionSettings
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            delegate.DelegateselectionLabel
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            4
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.userQueries
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName StepWizard--stepSubTitleString"
            style="--text-line-clamp: 2; width: 200px;"
          >
            titleOptional
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            5
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.groupQueries
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName StepWizard--stepSubTitleString"
            style="--text-line-clamp: 2; width: 200px;"
          >
            titleOptional
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            6
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 200px;"
          >
            platform.authSettings.ldap.userSyncSchedule
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical StyledProps--main stepContainer verticalStretch"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-large"
                  style="align-items: center;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--margin-right-small"
                  >
                    overview
                  </p>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="bp3-form-group bp3-intent-danger"
                    data-id="displayName-0"
                  >
                    <label
                      class="bp3-label"
                      for="displayName"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="stepOverviewForm_displayName"
                      >
                        name
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group bp3-intent-danger"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="displayName"
                          type="text"
                          value=""
                        />
                      </div>
                      <div
                        class="bp3-form-helper-text"
                      >
                        <div
                          class="FormError--errorDiv"
                          data-name="displayName"
                        >
                          <span
                            class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                            data-icon="circle-cross"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 13 13"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="FormError--error"
                          >
                            common.validation.nameIsRequired
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="authorizationEnabled-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checked StyledProps--main StyledProps--inline"
                      >
                        <input
                          checked=""
                          name="authorizationEnabled"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <span
                          class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                          data-tooltip-id="stepOverviewForm_authorizationEnabled"
                        >
                          platform.authSettings.enableAuthorization
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main stepCtaContainer"
                >
                  <button
                    aria-label="back"
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                    data-testid="cancel-overview-step"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                      icon="chevron-left"
                    >
                      <svg
                        data-icon="chevron-left"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-left
                        </desc>
                        <path
                          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      back
                    </span>
                  </button>
                  <button
                    aria-label="continue"
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                    data-testid="submit-overview-step"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      continue
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <span
        class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
        data-icon="harness-with-color"
      >
        <svg
          height="346"
          viewBox="0 0 25 25"
          width="346"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <button
      aria-label="close modal"
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main crossIcon Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      data-testid="close-ldap-setup-wizard"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="18"
          viewBox="0 0 16 16"
          width="18"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <footer />
</div>
`;
